--- a/day8.html
+++ b/day8.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="day8.css">
 </head>
 <body>
-    <h1>Array Functions Demo</h1>
+    <h1>Array Functions Demo by Umer Aftab</h1>
     <div id="buttons-container"></div>
     <div id="output"></div>
     <div id="explanation"></div>
